# Slicer3

./: CMakeLists.txt  TestingMacros.h  launch.tcl.in  slicer_variables.tcl
Extensions/Congealing4Slicer/: CMakeLists.txt
Modules/EMSegment/: CMakeLists.txt  vtkEMSegmentDynamicFrame.cxx  vtkEMSegmentDynamicFrame.h  vtkEMSegmentGUI.cxx  vtkEMSegmentGUI.h  vtkEMSegmentLogic.cxx  vtkEMSegmentLogic.h  vtkEMSegmentMRMLManager.cxx  vtkEMSegmentMRMLManager.h  vtkEMSegmentTclConnector.cxx  vtkEMSegmentTclConnector.h  vtkSlicerCommonInterface.cxx  vtkSlicerCommonInterface.h
Modules/EMSegment/AMF/: vtkImageLevelSets.cxx  vtkImageLevelSets.h  vtkImageLogOdds.cxx  vtkImageLogOdds.h
Modules/EMSegment/Algorithm/: EMLocalAlgorithm.h  EMLocalAlgorithm.txx  EMLocalAlgorithm_Initialization.txx  EMLocalAlgorithm_Print.txx  EMLocalShapeCostFunction.cxx  vtkImageEMGeneral.cxx  vtkImageEMGeneral.h  vtkImageEMLocalGenericClass.cxx  vtkImageEMLocalSegmenter.cxx  vtkImageEMLocalSegmenter.h  vtkImageEMLocalSuperClass.cxx  vtkImageEMLocalSuperClass.h  vtkImageLabelPropagation.cxx
Modules/EMSegment/Algorithm/LLSBiasCorrector/: CMakeLists.txt  LLSBiasCorrector.h  LLSBiasCorrector.txx
Modules/EMSegment/CMTK-Extension/: CMakeLists.txt
Modules/EMSegment/CMake/: EM_BaseSources.cmake  EM_DetectSlicerVersion.cmake  EM_Slicer3_FindPackageSlicer.cmake  EM_Slicer3_GraphicalUserInterface.cmake  EM_Slicer4_FindPackageSlicer.cmake  EM_Slicer4_GenerateExtensionFile.cmake  EM_Slicer4_GraphicalUserInterface.cmake  EM_Testing.cmake
Modules/EMSegment/CommandLineApplication/: CMakeLists.txt  EMSegmentAPIHelper.h  EMSegmentCommandLine.cxx  EMSegmentCommandLine.xml  EMSegmentCommandLineFct.cxx  EMSegmentCommandLineFct.h  EMSegmentHelper.h  EMSegmentTclInterpreter.cxx  EMSegmentTclInterpreter.h  EMSegmentTransformToNewFormat.cxx  EMSegmentTransformToNewFormat.xml  vtkEMSegmentTestUtilities.cxx
Modules/EMSegment/EMSegment4/: README
Modules/EMSegment/KWWidgets/: CMakeLists.txt  vtkEMSegmentInputChannelsStep.cxx  vtkEMSegmentKWDynamicFrame.cxx  vtkEMSegmentKWLogic.cxx  vtkEMSegmentKWLogic.h  vtkEMSegmentPreProcessingStep.cxx  vtkEMSegmentRunSegmentationStep.cxx
Modules/EMSegment/KWWidgets/Graph/: vtkIndirectLookupTable.h
Modules/EMSegment/MRML/: vtkMRMLEMSGlobalParametersNode.cxx  vtkMRMLEMSGlobalParametersNode.h  vtkMRMLEMSNode.cxx  vtkMRMLEMSSegmenterNode.cxx  vtkMRMLEMSTargetNode.h  vtkMRMLEMSTreeParametersLeafNode.cxx  vtkMRMLEMSTreeParametersLeafNode.h  vtkMRMLEMSTreeParametersNode.cxx  vtkMRMLEMSTreeParametersParentNode.cxx  vtkMRMLEMSTreeParametersParentNode.h  vtkMRMLEMSVolumeCollectionNode.cxx  vtkMRMLEMSVolumeCollectionNode.h  vtkMRMLEMSWorkingDataNode.cxx  vtkMRMLEMSWorkingDataNode.h
Modules/EMSegment/Qt/: CMakeLists.txt  qSlicerEMSegmentModule.cxx  qSlicerEMSegmentModule.h  qSlicerEMSegmentModuleWidget.cxx  qSlicerEMSegmentQuickModule.cxx  qSlicerEMSegmentQuickModule.h
Modules/EMSegment/Qt/Logic/: CMakeLists.txt
Modules/EMSegment/Qt/Py/: CMakeLists.txt  EMSegmentPy.py  EMSegmentQuickPy.py  qSlicerEMSegmentModuleWidget.py  qSlicerEMSegmentQuickModuleWidget.py
Modules/EMSegment/Qt/Widgets/: CMakeLists.txt  qSlicerEMSegmentAnatomicalTreeWidget.cxx  qSlicerEMSegmentAnatomicalTreeWidget.h  qSlicerEMSegmentAnatomicalTreeWidget_p.h  qSlicerEMSegmentGraphWidget.cxx  qSlicerEMSegmentInputChannelListWidget.cxx  qSlicerEMSegmentInputChannelListWidget.h
Modules/EMSegment/Qt/Workflow/: qSlicerEMSegmentDefineTaskStep.cxx  qSlicerEMSegmentRunSegmentationStep.cxx  qSlicerEMSegmentSegmentationLogicStep.cxx
Modules/EMSegment/Tasks/: CMTK.tcl  CT-Hand-Bone.mrml  CT-Hand-Bone.tcl  DEMONS.tcl  GenericTask.tcl  Human-Eye.mrml  Lesion-Exp.mrml  Lesion-Exp.tcl  MRI-Human-Brain-Exp.mrml  MRI-Human-Brain-Exp.tcl  MRI-Human-Brain-Full-Parcellation.mrml  MRI-Human-Brain-HIPR.mrml  MRI-Human-Brain-Hemisphere.mrml  MRI-Human-Brain-Parcellation.mrml  MRI-Human-Brain-Parcellation.tcl  MRI-Human-Brain.mrml  MRI-Human-Brain.mrml_remote  MRI-Human-Brain.tcl  Non-Human-Primate.mrml  Non-Human-Primate.tcl  Non-Human-Primate.tcl.backup  Registration_ANTS.tcl  Template.tcl  Test-Atlas-Cluster.mrml  Test-Atlas-Cluster.tcl  plastimatch.tcl  vtkCTHandBoneClass.cxx  vtkCTHandBoneClass.h
Modules/EMSegment/Tasks/MRI-Human-Brain/: atlas_greymatter_hem.nrrd  atlas_whitematter_hem.nrrd
Modules/EMSegment/Tasks/MRI-Human-Brain-Full-Parcellation/: atlas_csf_sub.nrrd  atlas_greymatter.nrrd  atlas_greymatter_sub.nrrd  atlas_skullneck.nrrd  atlas_whitematter.nrrd  atlas_whitematter_sub.nrrd
Modules/EMSegment/Tcl/: EMSegmentAutoSample.tcl  GenerateGraph.tcl  LevelSetSegmenter.tcl  LevelSetSegmenterFct.tcl
Modules/EMSegment/Testing/: CMakeLists.txt  test_atlas_creator.tcl  vtkEMSegmentBlackBoxSegmentationTest.cxx  vtkEMSegmentCompareTest.cxx  vtkEMSegmentMRMLManagerTest.cxx  vtkEMSegmentPreprocessingManagerTest.cxx  vtkEMSegmentRemoteIOTest.cxx  vtkEMSegmentTestUtilities.cxx  vtkSlicerCommonInterfaceTest1.cxx
Modules/EMSegment/Testing/TestData/: BRAINS_MRI-Human-Brain-Full-Parcellation_small.mrml  BRAINS_MRI-Human-Brain-Parcellation_small.mrml  BRAINS_MRI-Human-Brain_small.mrml  BRAINS_Non-Human-Primate_small.mrml  CMTK_MRI-Human-Brain-Full-Parcellation_small.mrml  CMTK_MRI-Human-Brain-Parcellation_small.mrml  CMTK_MRI-Human-Brain_small.mrml  CMTK_Non-Human-Primate_small.mrml  DefaultMRMLNodes.mrml  Human-Eye_LogMeanError.mrml  MRI-Human-Brain-Full-Parcellation_small.mrml  MRI-Human-Brain-Full-Parcellation_very_small.mrml  MRI-Human-Brain-Parcellation_small.mrml  MRI-Human-Brain-Parcellation_very_small.mrml  (+5 more)
Modules/EMSegment/Wizard/: vtkEMSegmentAnatomicalStructureStep.cxx  vtkEMSegmentInputChannelsStep.cxx  vtkEMSegmentInputChannelsStep.h  vtkEMSegmentIntensityDistributionsStep.cxx  vtkEMSegmentNodeParametersStep.cxx  vtkEMSegmentParametersSetStep.cxx  vtkEMSegmentPreProcessingStep.cxx  vtkEMSegmentPreProcessingStep.h  vtkEMSegmentRegistrationParametersStep.cxx  vtkEMSegmentRegistrationParametersStep.h  vtkEMSegmentRunSegmentationStep.cxx  vtkEMSegmentSpatialPriorsStep.cxx  vtkEMSegmentStep.cxx  vtkEMSegmentStep.h
(+355 files in other folders)
