ADD_SUBDIRECTORY(EMSegmentPyWizard)

SET(EMS_PYTHON_SCRIPTS
    EMSegmentPy.py
  )
  
SET(EMS_PYTHON_RESOURCES
  )
  
ctkMacroCompilePythonScript(
  TARGET_NAME EMSegmentPy
  SCRIPTS "${EMS_PYTHON_SCRIPTS}"
  RESOURCES "${EMS_PYTHON_RESOURCES}"
  DESTINATION_DIR ${Slicer_BINARY_DIR}/${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}
  INSTALL_DIR ${Slicer_INSTALL_LIB_DIR}
  )
